# Prokarstinator

./: CMakeLists.txt  GLinclude.h  main.cpp
Render/: ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h
Resource/: ResourceManager.cpp  ResourceManager.h
res/shaders/: shader.fsh  shader.vsh  sprite.fsh  sprite.vsh
source/: main.cpp
